@@ -735,7 +735,7 @@
 			[/column]
 
 			[column]
-				grow_factor = 1
+				grow_factor = 0
 				border = "all"
 				border_size = 5
 
@@ -746,6 +746,31 @@
 					definition = "default"
 					maximum_shown = 2
 				[/multimenu_button]
+			[/column]
+
+			[column]
+				grow_factor = 0
+				border = "all"
+				border_size = 5
+				horizontal_alignment = "left"
+
+				[label]
+					definition = "default"
+					label = _ "Order:"
+				[/label]
+			[/column]
+
+			[column]
+				grow_factor = 1
+				border = "all"
+				border_size = 5
+
+				horizontal_alignment = "left"
+
+				[menu_button]
+					id = "order_dropdown"
+					definition = "default"
+				[/menu_button]
 			[/column]
 
 			[column]
