@@ -3,6 +3,9 @@ changes may be omitted). For a complete list of changes, see the main
 changelog: https://github.com/wesnoth/wesnoth/blob/master/changelog
 
 Version 1.13.11:
+ * Add-ons client:
+   * Added an order dropdown that allows you to sort add-ons by the time of
+     latest update or original upload (issue #1747)
  * Campaigns:
    * An Orcish Incursion:
      * New story art.
