@@ -1,5 +1,7 @@
 Version 1.13.11:
  * Add-ons client:
+   * Added an order dropdown that allows you to sort add-ons by the time of
+     latest update or original upload (issue #1747)
    * Players will now be prompted to update outdated dependencies alongside
      missing once when installing an add-on.
  * Campaigns:
